<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDDDD"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.NeighbourProfilActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_profil_toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dddd"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/neighbourImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/index" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_white_white_24dp"/>

            <TextView
                android:id="@+id/TBneighbourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:text="Caroline"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#FFFF" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoris_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorBackgroundFloating"
        android:src="@drawable/ic_yellow_star_24"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/activity_profil_details"
        app:layout_constraintEnd_toEndOf="@+id/activity_profil_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/activity_profil_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:minHeight="125dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_profil_toolbar">

        <TextView
            android:id="@+id/neighbourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="Caroline"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            app:srcCompat="@drawable/ic_baseline_local_phone_24" />

        <ImageView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="160dp"
            app:srcCompat="@drawable/ic_baseline_language_24" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="53dp"
            android:columnCount="3"
            android:padding="20dp">

            <TextView
                android:id="@+id/neighbourAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_column="0"
                android:padding="10dp"
                android:text="Saint-Pierre-du-Mont à 5km" />

            <TextView
                android:id="@+id/neighbourPhone"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="10dp"
                android:text="+33 6 86 57 90 14" />

            <TextView
                android:id="@+id/neighbourFB"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:padding="10dp"
                android:text="www.facebook.fr/" />

        </TableLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:minHeight="100dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_profil_details">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:collapseColumns="2"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/Aproposdemoi"
                android:layout_width="207dp"
                android:layout_height="54dp"
                android:layout_row="1"
                android:layout_column="0"
                android:padding="10dp"
                android:text="A propos de moi"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/neighbourAboutMe"
                android:layout_width="207dp"
                android:layout_height="150dp"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="10dp"
                android:text="Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.." />


        </TableLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>