...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/Nameprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
...
